--- a/web/network-building.html
+++ b/web/network-building.html
@@ -16,6 +16,7 @@
   <script type="text/javascript" src="js/cola.js"></script>
   <script type="text/javascript" src="js/dagre.js"></script>
   <script type="text/javascript" src="js/dc.graph.js"></script>
+  <script type="text/javascript" src="js/chart.registry.js"></script>
 
   <script type="text/javascript" src="js/querystring.js"></script>
 
